--- a/RelAmb02/My Project/Resources.resx
+++ b/RelAmb02/My Project/Resources.resx
@@ -178,33 +178,6 @@
   <data name="_1_collectOthersPos" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\instructions\1_collectotherspos.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="_2_practiceObjectsAneg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\instructions\2_practiceobjectsaneg.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="_2_practiceObjectsApos" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\instructions\2_practiceobjectsapos.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="_2_practiceOthersAneg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\instructions\2_practiceothersaneg.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="_2_practiceOthersApos" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\instructions\2_practiceothersapos.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="_3b_breakInstr" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\instructions\3b_breakinstr.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="_3_experimentObjectsAneg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\instructions\3_experimentobjectsaneg.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="_3_experimentObjectsApos" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\instructions\3_experimentobjectsapos.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="_3_experimentOthersAneg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\instructions\3_experimentothersaneg.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="_3_experimentOthersApos" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\instructions\3_experimentothersapos.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
   <data name="_4_explicitInstr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\instructions\4_explicitinstr.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
@@ -219,5 +192,20 @@
   </data>
   <data name="practiceObjects" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Stimuli\practiceObjects.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="_2_practiceAneg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Instructions\2_practiceAneg.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="_2_practiceApos" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Instructions\2_practiceApos.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="_3_breakInstr" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Instructions\3_breakInstr.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="_3_experimentAneg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Instructions\3_experimentAneg.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="_3_experimentApos" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Instructions\3_experimentApos.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
